fixed issue with overlap between 2 sections at 1300px wide

--- a/src/css/Categories.css
+++ b/src/css/Categories.css
@@ -26,7 +26,7 @@
 @media (max-width: 1300px) {
     .categories-list {
         columns: 2;
-        height: 2000px;
+        height: 2200px;
     }
 }
 
